--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -249,7 +249,8 @@
                                 <div class="card-body pt-2 pb-0">
                                     <h6 class="ri-pie-chart-2-fill text-white mt-0 mb-0" style="display: inline-block">
                                         &nbsp;设备用时比例</h6>
-                                    <span id="date" class="text-white"></span>
+                                    <span class="text-white">2023-3-11</span>
+<!--                                    <span id="date" class="text-white">2023-3-11</span>-->
                                 </div>
                             </div>
                             <div class="card-body p-0"><!-- style="height: 40px;background-color: #FFFFFF"-->
