--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,8 +24,8 @@
                             <div class="col-lg-9">
                                 <div>
                                     <div class="text-center">
-                                        <div><a href="#" class="logo"><img src="../static/images/logo-light3.png"
-                                                                           height="90" alt="logo"></a></div>
+                                        <div><a href="#" class="logo"><img src="../static/images/工业大数据2.png"
+                                                                           height="30" alt="logo"></a></div>
                                         <!--                                        <h5 class="font-size-16 mt-4">欢迎回来！</h5>-->
                                         <p class="text-muted">欢迎回来！请登录</p></div>
                                     <div class="p-2 mt-5">
