--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -32,7 +32,7 @@
                         src="../static/images/logo-light2.png" alt="" height="55"></span></a><a th:href="@{/main}"
                                                                                                 class="logo logo-light"><span
                         class="logo-sm"><img src="../static/images/logo-sm-light.png" alt="" height="22"></span><span
-                        class="logo-lg"><img src="../static/images/logo-dark3.png" alt="" height="80"></span></a></div>
+                        class="logo-lg"><img src="../static/images/工业大数据1.png" alt="" height="25"></span></a></div>
                 <button type="button" class="btn btn-sm px-3 font-size-24 header-item waves-effect"
                         id="vertical-menu-btn"><i class="ri-menu-2-line align-middle"></i></button>
             </div>
