更新及时状态看板 设备产量计数分析（实时） 用时分析 部分前端样式

--- a/src/main/resources/templates/instanceStatus.html
+++ b/src/main/resources/templates/instanceStatus.html
@@ -159,9 +159,12 @@
                                 </p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00249</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">1000</span></br>  <hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工A</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">1000</span></br>  <hr style="margin: 5px">-->
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2">None</span></br>  <hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工A</span></br><hr style="margin: 5px">-->
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >None</span></br><hr style="margin: 5px">
                                 </div>
                             </div>
                         </div>
@@ -173,9 +176,12 @@
                                 <p class="name btn-danger"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(1).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[ 停机 32 分钟 ]</span></p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00274</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">994</span></br>  <hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工B</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">994</span></br>  <hr style="margin: 5px">-->
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" >None</span></br>  <hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工B</span></br><hr style="margin: 5px">-->
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >None</span></br><hr style="margin: 5px">
                                 </div>
                             </div>
                         </div>
@@ -191,9 +197,11 @@
                                 </p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00284</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">1004</span></br>  <hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工C</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${op50output}">1004</span></br>  <hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工C</span></br><hr style="margin: 5px">-->
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
                                 </div>
                             </div>
                         </div>
@@ -206,9 +214,12 @@
                                 </p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00293</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">999</span></br>  <hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工D</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" >None</span></br>  <hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">999</span></br>  <hr style="margin: 5px">-->
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工D</span></br><hr style="margin: 5px">-->
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >None</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
                                 </div>
                             </div>
                         </div>
@@ -224,9 +235,11 @@
                                 </p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00255</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">873</span></br>  <hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工E</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${op70output}">873</span></br>  <hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工E</span></br><hr style="margin: 5px">-->
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
                                 </div>
                             </div>
                         </div>
@@ -239,9 +252,11 @@
                                 </p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00267</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">944</span></br>  <hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工F</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${op60output}">944</span></br>  <hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工F</span></br><hr style="margin: 5px">-->
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
                                 </div>
                             </div>
                         </div>
@@ -257,9 +272,11 @@
                                 </p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00247</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">933</span></br>  <hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工G</span></br><hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${op40output}">933</span></br>  <hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工G</span></br><hr style="margin: 5px">-->
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
                                 </div>
                             </div>
                         </div>
