去掉固定时间显示

--- a/src/main/resources/templates/instanceStatus.html
+++ b/src/main/resources/templates/instanceStatus.html
@@ -155,7 +155,7 @@
                         <div class="card">
                             <div class="card-body" style="padding: 0">
                                 <img src="../static/images/machine.png" alt="" width="70" height="70" class="img1">
-                                <p class="name btn-success"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(0).getName()}">&nbsp;&nbsp;name</strong><span class="zhuangT">&nbsp;&nbsp;[ 运行 129 分钟 ]</span>
+                                <p class="name btn-success"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(0).getName()}">&nbsp;&nbsp;name</strong><span class="zhuangT">&nbsp;&nbsp;</span>
                                 </p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00249</span></br><hr style="margin: 5px">
@@ -173,7 +173,7 @@
                         <div class="card">
                             <div class="card-body" style="padding: 0">
                                 <img src="../static/images/machine.png" alt="" width="70" height="70" class="img1">
-                                <p class="name btn-danger"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(1).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[ 停机 32 分钟 ]</span></p>
+                                <p class="name btn-danger"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(1).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;</span></p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00274</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">994</span></br>  <hr style="margin: 5px">-->
@@ -193,7 +193,7 @@
                         <div class="card">
                             <div class="card-body" style="padding: 0">
                                 <img src="../static/images/machine.png" alt="" width="70" height="70" class="img1">
-                                <p class="name btn-success"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(2).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[ 运行 287 分钟 ]</span>
+                                <p class="name btn-success"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(2).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;</span>
                                 </p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00284</span></br><hr style="margin: 5px">
@@ -210,7 +210,7 @@
                         <div class="card">
                             <div class="card-body" style="padding: 0">
                                 <img src="../static/images/machine.png" alt="" width="70" height="70" class="img1">
-                                <p class="name btn-warning"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(3).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[ 警告 5 分钟 ]</span>
+                                <p class="name btn-warning"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(3).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;</span>
                                 </p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00293</span></br><hr style="margin: 5px">
@@ -231,7 +231,7 @@
                         <div class="card">
                             <div class="card-body" style="padding: 0">
                                 <img src="../static/images/machine.png" alt="" width="70" height="70" class="img1">
-                                <p class="name btn-primary"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(4).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[ 设定 28 分钟 ]</span>
+                                <p class="name btn-primary"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(4).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;</span>
                                 </p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00255</span></br><hr style="margin: 5px">
@@ -248,7 +248,7 @@
                         <div class="card">
                             <div class="card-body" style="padding: 0">
                                 <img src="../static/images/machine.png" alt="" width="70" height="70" class="img1">
-                                <p class="name btn-secondary"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(5).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[ 离线 97 分钟 ]</span>
+                                <p class="name btn-secondary"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(5).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;</span>
                                 </p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00267</span></br><hr style="margin: 5px">
@@ -268,7 +268,7 @@
                         <div class="card">
                             <div class="card-body" style="padding: 0">
                                 <img src="../static/images/machine.png" alt="" width="70" height="70" class="img1">
-                                <p class="name btn-success"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(6).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;[ 运行 27 分钟 ]</span>
+                                <p class="name btn-success"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(6).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;</span>
                                 </p>
                                 <div class="span1">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00247</span></br><hr style="margin: 5px">
