--- a/src/main/resources/templates/instanceStatus.html
+++ b/src/main/resources/templates/instanceStatus.html
@@ -162,9 +162,9 @@
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">1000</span></br>  <hr style="margin: 5px">-->
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2">None</span></br>  <hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工A</span></br><hr style="margin: 5px">-->
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >None</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >None</span></br><hr style="margin: 5px">-->
                                 </div>
                             </div>
                         </div>
@@ -175,13 +175,13 @@
                                 <img src="../static/images/machine.png" alt="" width="70" height="70" class="img1">
                                 <p class="name btn-danger"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(1).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;</span></p>
                                 <div class="span1">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00274</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(1).getId()}">00274</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">994</span></br>  <hr style="margin: 5px">-->
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" >None</span></br>  <hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工B</span></br><hr style="margin: 5px">-->
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >None</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >None</span></br><hr style="margin: 5px">-->
                                 </div>
                             </div>
                         </div>
@@ -196,11 +196,11 @@
                                 <p class="name btn-success"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(2).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;</span>
                                 </p>
                                 <div class="span1">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00284</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(2).getId()}">00284</span></br><hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${op50output}">1004</span></br>  <hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工C</span></br><hr style="margin: 5px">-->
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
                                 </div>
                             </div>
@@ -213,12 +213,12 @@
                                 <p class="name btn-warning"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(3).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;</span>
                                 </p>
                                 <div class="span1">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00293</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(3).getId()}">00293</span></br><hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" >None</span></br>  <hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">999</span></br>  <hr style="margin: 5px">-->
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工D</span></br><hr style="margin: 5px">-->
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >None</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >None</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
                                 </div>
                             </div>
@@ -234,11 +234,11 @@
                                 <p class="name btn-primary"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(4).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;</span>
                                 </p>
                                 <div class="span1">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00255</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(4).getId()}">00255</span></br><hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${op70output}">873</span></br>  <hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工E</span></br><hr style="margin: 5px">-->
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
                                 </div>
                             </div>
@@ -251,11 +251,11 @@
                                 <p class="name btn-secondary"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(5).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;</span>
                                 </p>
                                 <div class="span1">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00267</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(5).getId()}">00267</span></br><hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${op60output}">944</span></br>  <hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工F</span></br><hr style="margin: 5px">-->
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
                                 </div>
                             </div>
@@ -271,11 +271,11 @@
                                 <p class="name btn-success"><span class=" ri-printer-line"></span>&nbsp;<strong th:text="${data.get(6).getName()}">name</strong><span class="zhuangT">&nbsp;&nbsp;</span>
                                 </p>
                                 <div class="span1">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(0).getId()}">00247</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(6).getId()}">00247</span></br><hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${op40output}">933</span></br>  <hr style="margin: 5px">
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工G</span></br><hr style="margin: 5px">-->
-                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">
+<!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
                                 </div>
                             </div>
